tests/cases/parser/patterns/spread_pattern_in_namespace_pattern.stderr
error: spread patterns `...` cannot be used in a namespace pattern
 --> $DIR/spread_pattern_in_namespace_pattern.hash:4:7
3 |   // Spread patterns are disallowed within namespaces
4 |   { x,  ...d} := foo();
  |         ^^^ cannot specify a `...` here
  = help: expected a `identifier`
