tests/cases/parser/patterns/spread_pattern_in_namespace_pattern.hash
// run=fail, stage=parse

// Spread patterns are disallowed within namespaces
{ x,  ...d} := foo();
